--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Account Dashboard</title>
+    <style>*{
+      font-family: 'Poppins', sans-serif;
+      margin: 0;
+    }</style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
